2005-06-22  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoraenc.c: (theora_set_header_on_caps):
	* ext/vorbis/vorbisenc.c: (gst_vorbisenc_set_header_on_caps):
	Set buffers on caps as miniobjects and not as boxed.

2005-06-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to HEAD

=== release 0.9.1 ===

2005-06-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* .cvsignore:
	* NEWS:
	* README:
	* RELEASE:
	* configure.ac:
	* po/af.po:
	* po/az.po:
	* po/cs.po:
	* po/en_GB.po:
	* po/hu.po:
	* po/it.po:
	* po/nb.po:
	* po/nl.po:
	* po/or.po:
	* po/sq.po:
	* po/sr.po:
	* po/sv.po:
	* po/uk.po:
	* po/vi.po:
	  updates for release

2005-06-09  Andy Wingo  <wingo@pobox.com>

	* gst-libs/gst/net/Makefile.am (lib_LTLIBRARIES): Install gstnet.
	
2005-06-09  Andy Wingo  <wingo@pobox.com>

	* configure.ac:
	* gst-libs/gst/Makefile.am:
	* gst-libs/gst/net/Makefile.am:
	Add gstnet to build.

2005-06-09  Andy Wingo  <wingo@pobox.com>

	* gst-libs/gst/gconf/gconf.c:
	* gst/playback/test.c:
	* gst/playback/gstplaybin.c (gen_video_element): Ghost pad API
	fixes.

	* gst/audioconvert/gstaudioconvert.c: RPAD fixes.

	* ext/theora/theoraenc.c (theora_enc_chain): 
	* ext/theora/theoradec.c (theora_handle_data_packet): GCC4 fixes.

	* ext/ogg/gstoggdemux.c (GstOggPad): Derive from GstPad, not
	RealPad.

2005-06-02  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/net/Makefile.am:
	* pkgconfig/gstreamer-libs-uninstalled.pc.in:
	* pkgconfig/gstreamer-libs.pc.in:
	Added net stuff, version net lib.

2005-06-02  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (make_vorbis_theora_pipeline),
	(query_rates), (query_positions_elems), (query_positions_pads),
	(do_seek):
	Updated seek example.

2005-06-02  Andy Wingo  <wingo@pobox.com>

	* pkgconfig/gstreamer-libs-uninstalled.pc.in (prefix):
	* pkgconfig/gstreamer-libs.pc.in (prefix): Add gst/tag to the -L
	list.

	* gst/playback/gstdecodebin.c (gst_decode_bin_dispose): Don't